<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
   >
    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="200dp"

        android:src="@drawable/eng_background"
        android:layout_alignParentTop="true"
        android:id="@+id/imageView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="42dp"
        android:layout_alignTop="@+id/view2"
        android:layout_centerHorizontal="true">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:cardCornerRadius="7dp"
            app:cardBackgroundColor="#ffffff">
            <LinearLayout
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:textStyle="italic"

                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@android:drawable/ic_menu_my_calendar"/>
                    <EditText
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_code"
                        android:id="@+id/acti_login_edittext_username"/>

                    <Button
                        android:id="@+id/acti_login_button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/signing"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fogot_pass"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:selectAllOnFocus="false"
                    android:linksClickable="false"
                    android:autoLink="all"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:textStyle="italic"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="bottom"
                    android:text="@string/contact"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="12dp"
        android:id="@+id/view2"
        app:cardCornerRadius="50dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:visibility="invisible"
        android:layout_marginTop="117dp"
        android:thicknessRatio="1.9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_height="95dp"
            android:layout_width="95dp"
            android:layout_gravity="center"
            android:id="@+id/imageView1"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
